--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="login-screen">
         <div class="logo">10:13</div>
-        <div class="version">v1.1.4</div>
+        <div class="version">v1.1.5</div>
         <button class="btn" onclick="handleLogin()">sign in with google</button>
     </div>
 
@@ -1407,9 +1407,7 @@
                 cyan: '#00FFFF',
                 magenta: '#FF00FF',
                 yellow: '#FFFF00',
-                white: '#FFFFFF',
-                red: '#FF0000',
-                green: '#00FF00'
+                white: '#FFFFFF'
             };
 
             // Y-axis labels
@@ -1430,82 +1428,6 @@
                 ctx.moveTo(padding.left, y);
                 ctx.lineTo(padding.left + chartW, y);
                 ctx.stroke();
-            });
-
-            // Draw indicator bands with lead-in and fade-out
-            const dayWidth = data.length > 1 ? chartW / (data.length - 1) : chartW;
-            const leadIn = dayWidth / 8;  // ~3 hours before
-            const fadeOut = dayWidth / 4; // 6 hours after
-            const totalWidth = leadIn + fadeOut;
-            const peakPos = leadIn / totalWidth; // where 10% opacity peaks
-
-            data.forEach((d, i) => {
-                const x = padding.left + (data.length > 1 ? (i / (data.length - 1)) * chartW : chartW / 2);
-                const startX = x - leadIn;
-
-                // Red gradient band - substance
-                if (d.hasSubstanceUse) {
-                    const grad = ctx.createLinearGradient(startX, 0, startX + totalWidth, 0);
-                    grad.addColorStop(0, rgba(colors.red, 0));
-                    grad.addColorStop(peakPos, rgba(colors.red, 0.1));
-                    grad.addColorStop(1, rgba(colors.red, 0));
-                    ctx.fillStyle = grad;
-                    ctx.fillRect(startX, padding.top, totalWidth, chartH);
-                }
-
-                // Red striped gradient band - conflict
-                if (d.hasConflict) {
-                    const grad = ctx.createLinearGradient(startX, 0, startX + totalWidth, 0);
-                    grad.addColorStop(0, rgba(colors.red, 0));
-                    grad.addColorStop(peakPos, rgba(colors.red, 0.1));
-                    grad.addColorStop(1, rgba(colors.red, 0));
-                    ctx.fillStyle = grad;
-                    ctx.save();
-                    ctx.beginPath();
-                    for (let yy = padding.top; yy < padding.top + chartH; yy += 10) {
-                        ctx.rect(startX, yy, totalWidth, 5);
-                    }
-                    ctx.clip();
-                    ctx.fillRect(startX, padding.top, totalWidth, chartH);
-                    ctx.restore();
-                }
-
-                // Green gradient band - nootropic
-                if (d.hasNootropics) {
-                    const grad = ctx.createLinearGradient(startX, 0, startX + totalWidth, 0);
-                    grad.addColorStop(0, rgba(colors.green, 0));
-                    grad.addColorStop(peakPos, rgba(colors.green, 0.1));
-                    grad.addColorStop(1, rgba(colors.green, 0));
-                    ctx.fillStyle = grad;
-                    ctx.fillRect(startX, padding.top, totalWidth, chartH);
-                }
-
-                // White gradient band - sex
-                if (d.hasSex) {
-                    const grad = ctx.createLinearGradient(startX, 0, startX + totalWidth, 0);
-                    grad.addColorStop(0, rgba(colors.white, 0));
-                    grad.addColorStop(peakPos, rgba(colors.white, 0.1));
-                    grad.addColorStop(1, rgba(colors.white, 0));
-                    ctx.fillStyle = grad;
-                    ctx.fillRect(startX, padding.top, totalWidth, chartH);
-                }
-
-                // White striped gradient band - self sex
-                if (d.hasSelfSex) {
-                    const grad = ctx.createLinearGradient(startX, 0, startX + totalWidth, 0);
-                    grad.addColorStop(0, rgba(colors.white, 0));
-                    grad.addColorStop(peakPos, rgba(colors.white, 0.1));
-                    grad.addColorStop(1, rgba(colors.white, 0));
-                    ctx.fillStyle = grad;
-                    ctx.save();
-                    ctx.beginPath();
-                    for (let yy = padding.top + 5; yy < padding.top + chartH; yy += 10) {
-                        ctx.rect(startX, yy, totalWidth, 5);
-                    }
-                    ctx.clip();
-                    ctx.fillRect(startX, padding.top, totalWidth, chartH);
-                    ctx.restore();
-                }
             });
 
             // Color lines for gradient fills (cyan, magenta, yellow only - not white)
@@ -1556,13 +1478,68 @@
                 }
             });
 
-            // Draw dots (smaller for dense data)
-            const dotSize = data.length <= 7 ? 4 : data.length <= 30 ? 2.5 : 1.5;
-            allPointSets.forEach(({ points, color }) => {
-                points.forEach(p => {
+            // Dots with marker outlines (same color as line, solid=+1, dashed=-1)
+            const dotSize = data.length <= 7 ? 5 : data.length <= 30 ? 3.5 : 2;
+            const outlineSize = dotSize + 1; // Ring touches the dot edge
+
+            // Draw dots for each line with appropriate marker outlines
+            allPointSets.forEach(({ points, color, key }) => {
+                points.forEach((p) => {
+                    const d = data[p.index];
+
+                    // Determine which markers apply to this line
+                    let hasMarker = false;
+                    let isDashed = false;
+
+                    // Magenta/Pink line: substance (-1 dashed) and nootropics (+1 solid)
+                    if (key === 'magenta') {
+                        if (d.hasSubstanceUse) {
+                            hasMarker = true;
+                            isDashed = true; // -1
+                        } else if (d.hasNootropics) {
+                            hasMarker = true;
+                            isDashed = false; // +1
+                        }
+                    }
+
+                    // White/rating line: sex (+1 solid) and self sex (-1 dashed)
+                    if (key === 'rating') {
+                        if (d.hasSex) {
+                            hasMarker = true;
+                            isDashed = false; // +1
+                        } else if (d.hasSelfSex) {
+                            hasMarker = true;
+                            isDashed = true; // -1
+                        }
+                    }
+
+                    // Yellow line: conflict/fights (-1 dashed)
+                    if (key === 'yellow') {
+                        if (d.hasConflict) {
+                            hasMarker = true;
+                            isDashed = true; // -1
+                        }
+                    }
+
+                    // Draw outer ring if marker present (same color as line)
+                    if (hasMarker) {
+                        ctx.beginPath();
+                        ctx.arc(p.x, p.y, outlineSize, 0, Math.PI * 2);
+                        ctx.strokeStyle = color; // Same color as the line
+                        ctx.lineWidth = 2;
+                        if (isDashed) {
+                            ctx.setLineDash([3, 3]);
+                        } else {
+                            ctx.setLineDash([]);
+                        }
+                        ctx.stroke();
+                        ctx.setLineDash([]);
+                    }
+
+                    // Draw the dot - black if has marker, otherwise line color
                     ctx.beginPath();
                     ctx.arc(p.x, p.y, dotSize, 0, Math.PI * 2);
-                    ctx.fillStyle = color;
+                    ctx.fillStyle = hasMarker ? '#0D0D0D' : color;
                     ctx.fill();
                 });
             });
